@@ -110,6 +110,7 @@ Dist::Zilla::Plugin::ModuleBuildTiny = 0.004
 Dist::Zilla::Plugin::GithubMeta = 0
 Dist::Zilla::Plugin::GitHub::Update = 0
 Config::Identity::GitHub = 0
+Dist::Zilla::Plugin::BlockRelease = 0
 
 [Prereqs / MintingProfile]
 ; TODO: these should be added
@@ -173,6 +174,7 @@ Test::Mojibake = 0
 -relationship = requires
 Dist::Zilla::Plugin::MakeMaker::Fallback = 0.008
 Dist::Zilla::Plugin::GitHub::Update = 0
+Dist::Zilla::Plugin::BlockRelease = 0
 Test::Warnings = 0
 
 [MetaResources]
